# proj_x

./: .gitignore  README.md
docker/: proj_x.dockerfile
docs/: env_setup.txt  play_around_with_module_x.txt
modules/module_interface/: CMakeLists.txt  package.xml
modules/module_interface/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
modules/module_interface/install/module_interface/include/module_interface/module_interface/action/: simple_action.h
modules/module_interface/install/module_interface/include/module_interface/module_interface/action/detail/: simple_action__builder.hpp  simple_action__functions.h  simple_action__rosidl_typesupport_fastrtps_c.h  simple_action__struct.h  simple_action__struct.hpp  simple_action__type_support.cpp  simple_action__type_support.h  simple_action__type_support.hpp
modules/module_interface/install/module_interface/include/module_interface/module_interface/msg/: rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_cpp__visibility_control.h
modules/module_interface/install/module_interface/local/lib/python3.10/dist-packages/module_interface/: _module_interface_s.ep.rosidl_typesupport_c.c
modules/module_interface/install/module_interface/local/lib/python3.10/dist-packages/module_interface-0.0.0-py3.10.egg-info/: PKG-INFO
modules/module_interface/install/module_interface/local/lib/python3.10/dist-packages/module_interface/action/: _simple_action_s.c
modules/module_interface/install/module_interface/share/ament_index/resource_index/rosidl_interfaces/: module_interface
modules/module_interface/install/module_interface/share/module_interface/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
modules/module_interface/install/module_interface/share/module_interface/cmake/: ament_cmake_export_targets-extras.cmake  export_module_interface__rosidl_generator_cExport-noconfig.cmake  module_interfaceConfig.cmake  module_interface__rosidl_typesupport_cExport-noconfig.cmake  module_interface__rosidl_typesupport_cExport.cmake  module_interface__rosidl_typesupport_introspection_cExport-noconfig.cmake  module_interface__rosidl_typesupport_introspection_cppExport-noconfig.cmake  module_interface__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake
modules/module_interface/log/: latest_build
modules/module_x/: CMakeLists.txt  package.xml
modules/module_x/config/: params.yaml
modules/module_x/include/: algorithm_x.hpp  component_x.hpp
modules/module_x/launch/: launch_module_x.py
modules/module_x/src/: algorithm_x.cpp  component_x.cpp
modules/module_x/test/: CMakeLists.txt  test_algorithm_x.cpp
modules/module_y/: requirements.txt
modules/module_y/config/: config.yaml
modules/module_y/dataset/: __init__.py  occupancy_dataset.py
modules/module_y/docs/: .~lock.brief report of occupancy perception.odt#  brief report of occupancy perception.docx  brief report of occupancy perception.odt  report.odt
modules/module_y/loss/: __init__.py  loss.py
modules/module_y/model/: __init__.py
modules/module_y/script/: random_test.py
modules/module_y/tools/: generate_occupancy_nuscenes.py  (+3 more)
(+2 files in other folders)
